--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,40 +1,42 @@
 .filtros {
-    background-color: var(--color-surface);
-    border: 1px solid var(--color-border);
-    color: var(--color);
-    padding: 20px;
-    flex-grow: 1;
-    border-radius: var(--border);
+  background-color: var(--color-surface);
+  border: 1px solid var(--color-border);
+  color: var(--color);
+  padding: 20px;
+  flex-grow: 1;
+  border-radius: var(--border);
 }
 
-.filtro__container{
-    display: flex
-;
-    flex-direction: column;
-    gap: 20px;
+.filtro__container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.filtro__formulario{
-    display: flex
-;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
+.filtro__formulario {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
 }
 
-.filtros__group{
-    display: flex
-;
-    flex-direction: column;
-    align-items: flex-start;
+.filtros__group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .filtros__legenda {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .lista-filtros__button {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 12px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+.filtro__checker {
+  display: flex;
+  flex-direction: column;
 }
